--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,8 +5,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.4.2" // Use the latest Gradle version compatible with Kotlin
+        // classpath "com.android.tools.build:gradle:7.4.2" // Use the latest Gradle version compatible with Kotlin
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // Kotlin plugin
+        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 
