--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_maps_flutter: ^2.9.0
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
-  google_maps_flutter: ^2.9.0
-  location: ^6.0.2
+  location: ^7.0.0
+  geocoding: ^3.0.0
+  http: ^1.2.2
+  flutter_polyline_points: ^2.1.0
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
+  cloud_firestore: ^5.4.0
+
+  
+ 
 
 dev_dependencies:
   flutter_test:
