--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,4 +46,7 @@ flutter {
 }
 dependencies{
     implementation platform('com.google.firebase:firebase-bom:33.2.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
+    
 }
