--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,16 @@ dependencies:
   flutter_signin_button: ^2.0.0
   shared_preferences: ^2.3.2
   smooth_page_indicator: ^1.2.0+3
+  google_sign_in: ^6.2.1
+  firebase_storage: ^12.2.0
+  blur: ^4.0.0
+  cached_network_image: ^3.4.0
+  image_cropper: ^8.0.2
+  image: ^4.2.0
+  shimmer: ^3.0.0
+  intl: ^0.19.0
+  firebase_messaging: ^15.1.0
+
 
   
  
@@ -79,6 +89,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/Vicale_images/
+    - Assets/gifs/map.gif
+    - Assets/Images/
+
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
