--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   shimmer: ^3.0.0
   intl: ^0.19.0
   firebase_messaging: ^15.1.0
+  google_places_flutter: ^2.0.9
+  google_api_headers: ^4.2.2
 
 
   
@@ -88,9 +90,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - Assets/
     - Assets/Vicale_images/
     - Assets/gifs/map.gif
     - Assets/Images/
+    - Assets/fonts/
+
 
    
 
@@ -105,7 +110,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-fonts:
+  fonts:
     - family: Poppinsb
       fonts:
         - asset: Assets/fonts/Poppins-Bold.ttf
