--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,5 +48,6 @@ dependencies{
     implementation platform('com.google.firebase:firebase-bom:33.2.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
+    implementation("com.google.firebase:firebase-analytics")
     
 }
