--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   firebase_messaging: ^15.1.0
   google_places_flutter: ^2.0.9
   google_api_headers: ^4.2.2
+  googleapis_auth: ^1.6.0
+  device_info_plus: ^10.1.2
+
 
 
 
