--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   google_api_headers: ^4.2.2
   googleapis_auth: ^1.6.0
   device_info_plus: ^10.1.2
+  flutter_spinkit: ^5.2.1
 
 
 
